--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.seminer_application">
+    package="com.example.credit_card_app">
    <application
-        android:label="seminer_application"
+        android:label="credit_card_app"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
